<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.learn.wiratmoko11.movieapps.DetailActivityFragment"
    tools:showIn="@layout/activity_detail">


    <ImageView
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:id="@+id/cover_view"
        android:src="@drawable/movie1"
        android:contentDescription="@string/gambar"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_detail"
        android:text="@string/tahun_film"
        android:textSize="20sp"
        android:layout_alignTop="@+id/cover_view"
        android:layout_toRightOf="@+id/cover_view"
        android:layout_toEndOf="@+id/cover_view"
        android:layout_marginLeft="44dp"
        android:layout_marginStart="44dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/durasi_film"
        android:id="@+id/textView_durasi"
        android:textSize="20sp"
        android:layout_below="@+id/text_detail"
        android:layout_alignLeft="@+id/text_detail"
        android:layout_alignStart="@+id/text_detail" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/rating_movie"
        android:id="@+id/textView_rating"
        android:layout_below="@+id/textView_durasi"
        android:layout_alignLeft="@+id/textView_durasi"
        android:layout_alignStart="@+id/textView_durasi" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favorit"
        android:id="@+id/button_favorite"
        android:textSize="8sp"
        android:background="#28dbb5"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/textView_rating"
        android:layout_alignStart="@+id/textView_rating"
        android:layout_alignRight="@+id/textView_rating"
        android:layout_alignEnd="@+id/textView_rating" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@color/accent_material_light">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/judul_film"
            android:id="@+id/textView_judul"
            android:layout_marginTop="40dp"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:layout_marginLeft="40dp" />
    </LinearLayout>

</RelativeLayout>
